--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,7 +11,7 @@ body {
 html {
     font-size: 62.5%;
     overflow-x: hidden;
-    width: 100vw;
+    width: 99vw;
 }
 
 a {
@@ -27,6 +27,7 @@ a:hover {
 
     /************ HEADER **************/
 
+
 .bg-dark {
     background-color: black !important;
 }
@@ -35,7 +36,7 @@ nav {
     position: fixed !important;
     top: 0;
     z-index: 999;
-    width: 100vw;
+    width: 99vw;
 }
 .logo{
     width: 10rem;
@@ -120,7 +121,7 @@ nav {
 .banner {
     position: relative;
     width: 100%;
-    min-height:100vh;
+    height:100vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -134,7 +135,7 @@ nav {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/fondo.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../assets/fondo3.jpg);
     background-size: cover;
 }
 
@@ -188,24 +189,7 @@ h1 {
     align-items: center;
     background-color: black;
 }
-.h3-tienda {
-    display: grid;
-    background-color: black;
-    color: white;
-    margin-bottom: 0;
-}
-h3 {
-    font-size: 5rem;
-    margin: auto;
-    margin-top: 2rem;
-}
 
-h4, h5 {
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.7rem;
-    margin-top: 1rem;
-}
 
 .tienda {
     justify-content: center;
@@ -214,12 +198,12 @@ h4, h5 {
 .productos {
     margin: 4rem;
     padding: 2rem;
-    background-color: rgb(187, 185, 185);
     border-radius: 2rem;
 }
 .producto {
     border: solid 0.2rem black;
     border-radius: 2rem;
+    width: 400px;
 }
 
 .button-tienda {
@@ -391,4 +375,13 @@ input::placeholder {
     justify-content: center;
     align-items: center;
     font-size: 2rem;
+}
+
+
+#whatsapp {
+    position: fixed;
+    z-index: 1000;
+    bottom: 20px;
+    right: 20px;
+    width: 80px;
 }
